[gd_scene load_steps=11 format=3 uid="uid://2dgp28b8iovt"]

[ext_resource type="Script" path="res://mining_surface.gd" id="1_6mp2c"]
[ext_resource type="Script" path="res://treasure_layer.gd" id="2_2hgpp"]
[ext_resource type="Script" path="res://target_scale_camera.gd" id="2_3k3h2"]
[ext_resource type="Texture2D" uid="uid://dr5kpo7sip43i" path="res://assets/Hana Caraka Cozy Island - Free/props.png" id="2_4vqrk"]
[ext_resource type="Texture2D" uid="uid://wv7giu7tpo2k" path="res://assets/Hana Caraka Cozy Island - Free/tileset - simplified.png" id="3_iwsdm"]
[ext_resource type="Script" path="res://mining_tile_map.gd" id="5_ojwpm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mi0i4"]
texture = ExtResource("2_4vqrk")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0

[sub_resource type="TileSet" id="TileSet_dsgkl"]
sources/0 = SubResource("TileSetAtlasSource_mi0i4")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dywjk"]
texture = ExtResource("3_iwsdm")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0

[sub_resource type="TileSet" id="TileSet_ls6lc"]
sources/0 = SubResource("TileSetAtlasSource_dywjk")

[node name="MiningSurface" type="SubViewportContainer" node_paths=PackedStringArray("_camera", "_mining_tile_map", "_treasure_tile_map")]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
stretch = true
script = ExtResource("1_6mp2c")
map_target_rect = Rect2i(0, 0, 8, 6)
_camera = NodePath("SubViewport/Camera2D")
_mining_tile_map = NodePath("SubViewport/MiningTileMap")
_treasure_tile_map = NodePath("SubViewport/TreasureTileMap")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="TreasureTileMap" type="TileMapLayer" parent="SubViewport"]
texture_filter = 1
tile_set = SubResource("TileSet_dsgkl")
script = ExtResource("2_2hgpp")
treasure_tile = Vector2i(8, 2)

[node name="MiningTileMap" type="TileMapLayer" parent="SubViewport"]
texture_filter = 1
tile_set = SubResource("TileSet_ls6lc")
script = ExtResource("5_ojwpm")
mining_stage_tiles = Array[Vector2i]([Vector2i(8, 4), Vector2i(1, 3), Vector2i(3, 3), Vector2i(10, 4)])

[node name="Camera2D" type="Camera2D" parent="SubViewport"]
texture_filter = 1
script = ExtResource("2_3k3h2")

[connection signal="mine" from="SubViewport/MiningTileMap" to="." method="_on_mine"]
